<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/backgroud" >

    <ImageView
        android:id="@+id/imageView_welcome_logo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/welcome_logo" />

    <Button
        android:id="@+id/button_welcome_arrow"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/welcome_arrow" />

    <TextView
        android:id="@+id/textView_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_welcome_arrow"
        android:layout_centerHorizontal="true"
        android:text="@string/content" />

    <Button
        android:id="@+id/button_welcome_anter_btn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_above="@id/textView_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/welcome_anter_btn"
        android:padding="0dp"
        android:text="@string/welcome_anter_btn" />

    <TextView
        android:id="@+id/textView_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_welcome_anter_btn"
        android:layout_centerHorizontal="true"
        android:text="@string/unit" />

</RelativeLayout>