<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearlayout_top"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@drawable/bottom_bar_bg"
    android:orientation="horizontal" 
    android:baselineAligned="true">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="left"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView_back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:contentDescription="@string/app_name"
            android:src="@drawable/back_arrow" />

        <Button
            android:id="@+id/button_back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/back" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="right"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView_photo_share_btn"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:contentDescription="@string/app_name"
            android:src="@drawable/photo_share_btn" />

        <Button
            android:id="@+id/button_photo_share_btn"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/share" />
    </LinearLayout>

</LinearLayout>